<resources>
    <string name="app_name">ShiftMe</string>

    <string name="error_empty_number">Please enter mobile number.</string>
    <string name="error_invalid_number">Please enter valid mobile number.</string>
    <string name="error_empty_field">Please enter %1$s.</string>
    <string name="error_password_doesn_t_match">Password and Confirm password doesn\'t match.</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_country_code">Country Code</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_address_optional">Address (Optional)</string>
    <string name="hint_address">Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="tv_sign_up">Sign Up</string>
    <string name="tv_already_have_an_account"><![CDATA[Already have an account?]]></string>
    <string name="hint_user_role">User Role</string>

    <string name="hint_enter_your_email_id">Email Id</string>
    <string name="hint_password">Password</string>
    <string name="tv_login">Login</string>
    <string name="tv_don_t_have_an_account"><![CDATA[Don\'t have an account?]]></string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_save">Save</string>

    <string-array name="userRoles">
        <item>Customer</item>
        <item>Agency</item>
    </string-array>

    <string name="tv_resend">Resend</string>
    <string name="tv_cancel">Cancel</string>

    <string name="tv_verify_otp">Verify OTP</string>
    <string name="tv_otp_sent_msg">Please type the verification code sent to your registered mobile number.</string>
    <string name="tv_otp_resend_msg"><![CDATA[Didn\'t receive the code?: ]]> %1$s</string>

    <string name="tv_home_fragment">Home Fragment</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">User Profile</string>
    <string name="menu_customer_requests">Customer Requests</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="tv_user_profile">User Profile</string>
    <string name="tv_send_request">Send Request</string>
    <string name="enter_items_hint">Enter Items</string>
    <string name="tv_add_items">Add Items</string>
    <string name="location_to_pick">Location to pick Items</string>
    <string name="destination_location">Destination Location</string>
    <string name="pick_location">Pick Location</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="tv_edit">Edit</string>
    <string name="tv_logout">Logout</string>
    <string name="no_of_movers">Number of Movers</string>

    <string-array name="vehicle">
        <item>Small - 5$/km</item>
        <item>Large - 10$/km</item>
        <item>Very Large - 15$/km</item>
    </string-array>

    <string name="tv_current_location">Current Location</string>
    <string name="maps_api_key">AIzaSyAuhOWLdPnetyS5vsYwx_BFSoEPoTrXxoE</string>

    <string name="list_of_items_to_move">List of items to move: %1$s</string>
    <string name="estimated_distance">Estimated distance: %1$s</string>
    <string name="date_time_for_pick">Date: %1$s and Time: %2$s</string>
    <string name="request_by">Request By: %1$s</string>
    <string name="approved_by">Approved By: %1$s</string>
    <string name="set_pick_location">Pick location: %1$s</string>
    <string name="set_estimated_cost">Estimated cost: %1$s</string>
    <string name="set_destination_location">Destination location: %1$s</string>
    <string name="tv_no_data_available">No Data Available</string>

</resources>