<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.techai.shiftme.ui.userprofile.UserProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFullName"
                style="@style/CustomTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:enabled="@{viewModel.isEnabled}"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:errorText="@{viewModel.errorFullName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/hint_full_name"
                    android:inputType="text"
                    android:text="@={viewModel.fullName}"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorHint"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCountryCode"
                style="@style/CustomTextInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:enabled="@{viewModel.isEnabled}"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietCountryCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusable="false"
                    android:hint="@string/hint_country_code"
                    android:inputType="number"
                    android:longClickable="false"
                    android:text="+1"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorHint"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContactNumber"
                style="@style/CustomTextInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:enabled="@{viewModel.isEnabled}"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:errorText="@{viewModel.errorMobileNumber}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tilCountryCode"
                app:layout_constraintTop_toBottomOf="@+id/tilFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/hint_mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="@={viewModel.mobileNumber}"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorHint"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailId"
                style="@style/CustomTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:enabled="@{viewModel.isEnabled}"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:errorText="@{viewModel.errorEmailId}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilContactNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/hint_enter_your_email_id"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.emailId}"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorHint"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAddress"
                style="@style/CustomTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:enabled="@{viewModel.isEnabled}"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:errorText="@{viewModel.errorAddress}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmailId">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/hint_address_optional"
                    android:inputType="text"
                    android:text="@={viewModel.address}"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorHint"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserRole"
                style="@style/CustomTextInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietUserRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/hint_user_role"
                    android:inputType="text"
                    android:text="@={viewModel.userRole}"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorHint"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:backgroundTint="@color/colorTwo"
                android:onClick="@{viewModel::onClick}"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/tv_save"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilUserRole" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>